@@ -243,108 +243,3 @@ CustomLog logs/test_004_30 issue_203
         
         post_and_verify( "data-1k", [ ] )
 
-    @pytest.mark.skipif(False, reason="not fixed yet")
-    def test_004_41(self):
-        # test gRPC like requests that do not end, but give answers, see #207
-        #
-        # this test works like this:
-        # - use curl to POST data to the server /h2test/echo
-        # - feed curl the data in chunks, wait a bit between chunks
-        # - since some buffering on curl's stdout to Python is involved,
-        #   we will see the response data only at the end.
-        # - therefore, we enable tracing with timestamps in curl on stderr
-        #   and see when the response chunks arrive
-        # - if the server sends the incoming data chunks back right away,
-        #   as it should, we see receiving timestamps separated roughly by the
-        #   wait time between sends.
-        #
-        conf = HttpdConf().add_line("H2OutputBuffering off").add_vhost_cgi().install()
-        assert TestEnv.apache_restart() == 0
-
-        def _start_proc(args: [str]):
-            sys.stderr.write("starting: {0}\n".format(args))
-            self.proc = subprocess.Popen(args, stdin=subprocess.PIPE,
-                                         stdout=subprocess.PIPE,
-                                         stderr=subprocess.PIPE,
-                                         bufsize=0)
-
-            def read_output(fh, buffer):
-                while True:
-                    chunk = fh.read()
-                    if not chunk:
-                        break
-                    buffer.append(chunk.decode())
-
-            # collect all stdout and stderr until we are done
-            # use separate threads to not block ourself
-            if self.proc.stderr:
-                self._stderr = []
-                self.stderr_thread = Thread(target=read_output, args=(self.proc.stderr, self._stderr))
-                self.stderr_thread.start()
-            if self.proc.stdout:
-                self._stdout = []
-                self.stdout_thread = Thread(target=read_output, args=(self.proc.stdout, self._stdout))
-                self.stdout_thread.start()
-            return self.proc
-
-        def _end_proc():
-            if self.proc:
-                try:
-                    if self.proc.stdin:
-                        try:
-                            self.proc.stdin.close()
-                        except Exception:
-                            pass
-                    if self.proc.stdout:
-                        self.proc.stdout.close()
-                    if self.proc.stderr:
-                        self.proc.stderr.close()
-                except Exception:
-                    self.proc.terminate()
-                finally:
-                    self.stdout_thread = None
-                    self.stderr_thread = None
-                    self.proc = None
-
-        url = TestEnv.mkurl("https", "cgi", "/h2test/echo")
-        args, headerfile = TestEnv.curl_complete_args(url, timeout=5, options=[
-            "-T", "-", "-X", "POST", "--trace-ascii", "%", "--trace-time"])
-        _start_proc(args)
-        base_chunk = "0123456789"
-        chunks = ["chunk-{0:03d}-{1}\n".format(i, base_chunk) for i in range(5)]
-        stutter_secs = 0.1
-        for chunk in chunks:
-            self.proc.stdin.write(chunk.encode())
-            self.proc.stdin.flush()
-            time.sleep(stutter_secs)
-        self.proc.stdin.close()
-        self.stdout_thread.join()
-        self.stderr_thread.join()
-        _end_proc()
-        # assert we got everything back
-        assert "".join(chunks) == "".join(self._stdout)
-        # now the tricky part: check *when* we got everything back
-        recv_times = []
-        for line in "".join(self._stderr).split('\n'):
-            m = re.match(r'^\s*(\d+:\d+:\d+(\.\d+)?) <= Recv data, (\d+) bytes.*', line)
-            if m:
-                recv_times.append(datetime.time.fromisoformat(m.group(1)))
-        # received as many chunks as we sent
-        assert len(chunks) == len(recv_times), "received response not in {0} chunks, but {1}".format(
-            len(chunks), len(recv_times))
-
-        def microsecs(ts):
-            return ((ts.hour * 60 + ts.minute) * 60 + ts.second) * 1000000 + ts.microsecond
-
-        recv_deltas = []
-        last_mics = microsecs(recv_times[0])
-        for ts in recv_times[1:]:
-            mics = microsecs(ts)
-            delta_mics = mics - last_mics
-            if delta_mics < 0:
-                delta_mics += datetime.time(23, 59, 59, 999999)
-            recv_deltas.append(datetime.timedelta(microseconds=delta_mics))
-            last_mics = mics
-        stutter_td = datetime.timedelta(microseconds=stutter_secs * 1000000)
-        for idx, td in enumerate(recv_deltas[1:]):
-            assert stutter_td < td, "chunk {0} arrived too early after {1}".format(idx, td)
